@@ -9,6 +9,7 @@ Release 1.0.7
 * fix bugs in the RHD file wrapper
 * add clean_merging option to remove duplicated spikes in pairs during meta merging
 * fix the info function in the launcher
+* fix for common ground if only one shank
 
 =============
 Release 1.0.6
